test/libyul/yulSyntaxTests/blobbasefee_reserved_identifier_post_cancun.yul
{
    function blobbasefee() {}
}
// ====
// EVMVersion: >=cancun
// ----
// ParserError 5568: (15-26): Cannot use builtin function name "blobbasefee" as identifier name.
